# graphrag-clinical-screening

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  scaffold.sh
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml.example
configs/: model.yaml  neo4j.yaml
configs/experiment/: nsclc_sequoia.yaml
data/processed/: README.md
data/raw/: README.md
docs/: architecture.md  hosting_guide.md
iaa_pipeline/: __init__.py  aligners.py  cache.py  cli.py  metrics.py  stage_runner.py  stage_schemas.py  streamlit_app.py
iaa_pipeline/for_reference/: README (2).md  app_phase1.py  app_phase2.py  test_workspace.py  workspace.py
iaa_pipeline_spec/: 03_json_schemas.md  04_stage_runners.md  README.md  audit_streamlit_v1.md  iaa_8trials.txt  iaa_8trials_selection.md
notebooks/: 01_aact_nsclc_sampling_frame.py  02_protocol_selection.py
pipeline/: 01_criteria_extraction.py  02_llm_annotation.py  03_recover_has_value.py  04_correct_relation_type.py  05_reextract_constraints.py  06_validate_annotation.py  07_neo4j_ingest.py  08_review_queries.py  HANDOFF.md  PIPELINE.md  REVIEW.md  REVIEW_notion.md  __init__.py  _archive_dedup_nested_exception.py  _archive_labelstudio_export.py  _archive_rename_observation.py  config.py  labelstudio_schema.xml  llm_client.py  nct_ids.txt  orchestrator.py  regex_extractor.py  review_queries.cypher  review_session.py  transforms.py  validators.py
results/: README.md
scripts/: compute_iaa.py  convert_production_to_iaa.py  run_iaa_ui.sh
streamlit_apps/: stage1_app.py
tests/: test_iaa_metrics.py
(+72 files in other folders)
